# databricks-opentelemetry

./: .gitignore  README.md
.github/workflows/: build-and-publish.yml
agent/: init.sh
confs/pull/agent/: init.sh
confs/pull/agent/otel_config_templates/: config.yaml  driver_exporters.yaml.tpl  driver_processors.yaml.tpl  driver_receivers.yaml.tpl  driver_service.yaml.tpl  worker_exporters.yaml.tpl  worker_processors.yaml.tpl  worker_receivers.yaml.tpl  worker_service.yaml.tpl
confs/push/agent/: init.sh
databricks-otelcol/: build.sh  builder-config-amd64.yaml  builder-config-arm64.yaml  logs-otelcol.yaml
exporter/: .gitignore  pyproject.toml
exporter/src/databricks_opentelemetry_exporter/: main.py
exporter/src/databricks_opentelemetry_exporter/logs/: export.py
exporter/src/databricks_opentelemetry_exporter/metrics/: export.py
exporter/src/databricks_opentelemetry_exporter/resource/: os.py  resource.py
exporter/src/databricks_opentelemetry_exporter/resource/cloud/: aws.py
exporter/src/databricks_opentelemetry_exporter/traces/: export.py
exporter/src/databricks_opentelemetry_exporter/util/: uuids.py
exporter/src/tests/: test_log_export.py  test_log_integration.py  test_uuids.py
obs-infra/: .terraform.lock.hcl  init.py  links.py  setup.sh
setup/: README.md  deploy.py  init.py  init.sh  main.tf  prometheus.json
tests/: common.py  requirements.txt  runner.py  test  test.ipynb
